# BotNet

./: CMakeLists.txt
botnet_framework/: Makefile  README.md
botnet_framework/include/: botnet.h  config.h  structures.h
botnet_framework/include/attack/: amplification.h  attack.h  vectors.h
botnet_framework/include/communication/: c2_client.h  communication.h  encryption.h  heartbeat.h  p2p_network.h  protocol.h  reporting.h
botnet_framework/include/compat/: network.h  raw_structs.h
botnet_framework/include/core/: controller.h  core.h  signal_handler.h
botnet_framework/include/infection/: brute_force.h  exploit.h  infection.h  payload.h  persistence.h  scanner.h
botnet_framework/include/stealth/: anti_analysis.h  process_hiding.h  stealth.h
botnet_framework/include/utils/: config_parser.h  dga.h  network_utils.h  utils.h
botnet_framework/scripts/: build.sh
botnet_framework/src/attack/: attack_manager.c  http_flood.c  multi_vector.c  slowloris.c  tcp_flood.c  udp_flood.c
botnet_framework/src/attack/amplification/: dns_amp.c  ntp_amp.c  ssdp_amp.c
botnet_framework/src/communication/: c2_client.c  encryption.c  heartbeat.c  p2p_network.c  protocol.c  reporting.c
botnet_framework/src/config/: default.conf
botnet_framework/src/core/: botnet.c  controller.c  main.c  scheduler.c  signal_handler.c
botnet_framework/src/infection/: brute_force.c  exploit.c  infection.c  persistence.c  scanner.c
botnet_framework/src/stealth/: aes.c  aes.h  anti_analysis.c  cleanup.c  cryptography.c  network_stealth.c  process_hiding.c  rootkit.c  stealth.c
botnet_framework/src/utils/: config_parser.c  dga.c  logging.c  network_utils.c
